fix(ds): unvisible arrow in select and bold title in modal

--- a/core/design-system/src/components/ds-select/ds-select.module.scss
+++ b/core/design-system/src/components/ds-select/ds-select.module.scss
@@ -34,7 +34,8 @@
 .arrow {
   position: absolute;
   right: 2px;
-  z-index: -1;
+  z-index: 1;
+  pointer-events: none;
 }
 
 .arrow-vertical {
